Cambiados bastantes aspectos graficos, relacionados con bootstrap y el theme.

--- a/src/Archmage/GameBundle/Resources/views/Magic/charge.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/charge.html.twig
@@ -7,9 +7,9 @@
         <div class="row">
             <div class="col-md-offset-3 col-md-6 col-xs-12">
                 <div class="page-header text-center">
-                    <h1><i class="fa fa-fw fa-lg fa-tint"></i>Cargar maná</h1>
+                    <h1><i class="fa fa-fw fa-tint"></i>Cargar maná</h1>
                 </div>
-                <div class="panel panel-primary">
+                <div class="panel panel-default">
                     <div class="panel-heading text-center">Recarga maná para lanzar hechizos costosos</div>
                     <div class="panel-body text-center">
                         <form data-toggle="validator">
@@ -20,7 +20,7 @@
                                     <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
                                 </div>
                             </div>
-                            <button type="submit" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-hourglass-half"></i> Gastar turnos</button>
+                            <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-lg fa-hourglass-half"></i> Gastar turnos</button>
                         </form>
                     </div>
                     <div class="panel-footer">
