--- a/src/Archmage/GameBundle/Resources/views/Account/outbox.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Account/outbox.html.twig
@@ -1,13 +1,13 @@
 {% extends "ArchmageGameBundle::layout.html.twig" %}
 
-{% block title %}Leer mensajes{% endblock %}
+{% block title %}Enviar mensajes{% endblock %}
 
 {% block body %}
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
                 <div class="page-header text-center">
-                    <h1><i class="fa fa-fw fa-envelope"></i>Leer mensajes</h1>
+                    <h1><i class="fa fa-fw fa-envelope"></i>Enviar mensajes</h1>
                 </div>
                 {% for i in 1..7 %}
                     {% if loop.index is odd %}
