--- a/src/Archmage/GameBundle/Resources/views/Account/profile.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Account/profile.html.twig
@@ -1,13 +1,20 @@
 {% extends "ArchmageGameBundle::layout.html.twig" %}
 
-{% block title %}Cuenta{% endblock %}
+{% block title %}Perfil{% endblock %}
 
 {% block body %}
     <div class="container">
-        <div class="row">
-            <div class="col-md-offset-3 col-md-6 col-xs-12">
-                <div class="page-header text-center">
-                    <h1><i class="fa fa-fw fa-lg fa-user"></i>Perfil</h1>
+        <br>
+        <div class="jumbotron text-center">
+            <h1><i class="fa fa-fw fa-user"></i>Perfil</h1>
+            <hr>
+            <div class="row">
+                <div class="col-md-offset-5 col-md-2 col-xs-12">
+                    <a href="{{ path('archmage_game_account_ranking') }}" class="thumbnail"><img src="{{ asset('bundles/archmagegame/images/faction/darkness.jpg') }}"/></a>
+                    <div class="caption hidden-xs">
+                        <h3>Nombre</h3>
+                        <small>Texto de prueba</small>
+                    </div>
                 </div>
             </div>
         </div>
