--- a/src/Archmage/GameBundle/Resources/views/Army/attack.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/attack.html.twig
@@ -7,7 +7,7 @@
         <div class="row">
             <div class="col-xs-12">
                 <div class="page-header text-center">
-                    <h1>Ejército <i class="fa fa-fw fa-lg fa-flag"></i> <small>Atacar</small></h1>
+                    <h1><i class="fa fa-fw fa-flag"></i>Atacar</h1>
                 </div>
             </div>
         </div>
