--- a/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/help.html.twig
@@ -1,15 +1,16 @@
 {% extends "ArchmageGameBundle::layout.html.twig" %}
 
-{% block title %}Contratar{% endblock %}
+{% block title %}Ayuda{% endblock %}
 
 {% block body %}
     <div class="container">
         <div class="row">
-            <div class="col-md-offset-3 col-md-6 col-xs-12">
+            <div class="col-xs-12">
                 <div class="page-header text-center">
-                    <h1><i class="fa fa-fw fa-lg fa-beer"></i>Taberna</h1>
+                    <h1><i class="fa fa-fw fa-book"></i>Ayuda</h1>
                 </div>
             </div>
+
         </div>
     </div>
 {% endblock %}
