--- a/src/Archmage/GameBundle/Resources/views/Home/index.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/index.html.twig
@@ -2,54 +2,52 @@
 
 {% block title %}Bienvenid@{% endblock %}
 
-{% block nav %}{% endblock %}
-
 {% block body %}
     <div class="container">
         <br>
         <div class="jumbotron text-center">
-            <h1>Arch<i class="fa fa-fw fa-lg fa-eye"></i>Mage</h1>
-            <form class="form-signin">
-                <input type="text" class="form-control" placeholder="Usuario" required autofocus>
+            <h1>Arch<i class="fa fa-fw fa-eye"></i>Mage</h1>
+            <form class="form-signin" data-toggle="validator">
+                <input type="text" class="form-control" placeholder="Usuario" required>
                 <input type="password" class="form-control" placeholder="Contraseña" required>
                 <button class="btn btn-lg btn-primary btn-block" type="submit">Entrar</button>
             </form>
-            <a href="#">Registrar</a> - <a href="#">Recuperar</a>
-            <hr>
+            <a href="#">Registrar</a> - <a href="#">Recuperar</a> - <a href="{{ path('archmage_game_home_help') }}">Ayuda</a>
+            <br><br>
             <div class="row">
-                <div class="col-md-offset-1 col-md-2">
-                    <a href="#" class="thumbnail"><img src="{{ asset('bundles/archmagegame/images/faction/doom.jpg') }}"></a>
-                    <div class="caption">
+                <div class="col-xs-offset-1 col-xs-2">
+                    <a href="{{ path('archmage_game_home_help') }}#doom" class="thumbnail"><img src="{{ asset('bundles/archmagegame/images/faction/doom.jpg') }}"/></a>
+                    <div class="caption hidden-xs text-danger">
                         <h3>Destrucción</h3>
-                        <small>Texto de prueba texto de prueba</small>
+                        <small>Fuego y sangre</small>
                     </div>
                 </div>
-                <div class="col-md-2">
-                    <a href="#" class="thumbnail"><img src="{{ asset('bundles/archmagegame/images/faction/darkness.jpg') }}"></a>
-                    <div class="caption">
+                <div class="col-xs-2">
+                    <a href="{{ path('archmage_game_home_help') }}#darkness" class="thumbnail"><img src="{{ asset('bundles/archmagegame/images/faction/darkness.jpg') }}"/></a>
+                    <div class="caption hidden-xs text-warning">
                         <h3>Oscuridad</h3>
-                        <small>Texto de prueba texto de prueba</small>
+                        <small>No muerte</small>
                     </div>
                 </div>
-                <div class="col-md-2">
-                    <a href="#" class="thumbnail"><img src="{{ asset('bundles/archmagegame/images/faction/nature.jpg') }}"></a>
-                    <div class="caption">
+                <div class="col-xs-2">
+                    <a href="{{ path('archmage_game_home_help') }}#nature" class="thumbnail"><img src="{{ asset('bundles/archmagegame/images/faction/nature.jpg') }}"/></a>
+                    <div class="caption hidden-xs text-success">
                         <h3>Naturaleza</h3>
-                        <small>Texto de prueba texto de prueba</small>
+                        <small>Quid pro quo</small>
                     </div>
                 </div>
-                <div class="col-md-2">
-                    <a href="#" class="thumbnail"><img src="{{ asset('bundles/archmagegame/images/faction/ghost.jpg') }}"></a>
-                    <div class="caption">
+                <div class="col-xs-2">
+                    <a href="{{ path('archmage_game_home_help') }}#ghost" class="thumbnail"><img src="{{ asset('bundles/archmagegame/images/faction/ghost.jpg') }}"/></a>
+                    <div class="caption hidden-xs text-info">
                         <h3>Fantasmal</h3>
-                        <small>Texto de prueba texto de prueba</small>
+                        <small>Mente y espíritu</small>
                     </div>
                 </div>
-                <div class="col-md-2">
-                    <a href="#" class="thumbnail"><img src="{{ asset('bundles/archmagegame/images/faction/holy.jpg') }}"></a>
-                    <div class="caption">
+                <div class="col-xs-2">
+                    <a href="{{ path('archmage_game_home_help') }}#sacred" class="thumbnail"><img src="{{ asset('bundles/archmagegame/images/faction/holy.jpg') }}"/></a>
+                    <div class="caption hidden-xs text-primary">
                         <h3>Sagrado</h3>
-                        <small>Texto de prueba texto de prueba</small>
+                        <small>Luz y pureza</small>
                     </div>
                 </div>
             </div>
