--- a/src/Archmage/GameBundle/Resources/views/Kingdom/summary.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/summary.html.twig
@@ -7,12 +7,31 @@
         <div class="row">
             <div class="col-xs-12">
                 <div class="page-header text-center">
-                    <h1><i class="fa fa-fw fa-lg fa-bar-chart"></i>Reino</h1>
+                    <h1><i class="fa fa-fw fa-bar-chart"></i>Reino</h1>
                 </div>
             </div>
             <div class="col-xs-12 col-md-6">
-                <div class="panel panel-primary">
-                    <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-globe"></i> Territorio</div>
+                <div class="panel panel-default">
+                    <div class="panel-heading text-center">Economía</div>
+                    <div class="panel-body">
+                        <div class="row">
+                            <div class="col-xs-3">
+                                <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/treasure.jpg') }}">
+                            </div>
+                            <div class="col-xs-9">
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="btn-group btn-group-justified" role="group" aria-label="...">
+                        <a href="{{ path('archmage_game_kingdom_tax') }}" class="btn btn-default"><i class="fa fa-fw fa-lg fa-money"></i><span class="hidden-xs"> Recaudar</span></a>
+                        <a href="{{ path('archmage_game_kingdom_auction') }}" class="btn btn-default"><i class="fa fa-fw fa-lg fa-beer"></i><span class="hidden-xs"> Contratar</span></a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-12 col-md-6">
+                <div class="panel panel-default">
+                    <div class="panel-heading text-center">Territorio</div>
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-xs-3">
@@ -31,8 +50,8 @@
                 </div>
             </div>
             <div class="col-xs-12 col-md-6">
-                <div class="panel panel-primary">
-                    <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-flask"></i> Magia</div>
+                <div class="panel panel-default">
+                    <div class="panel-heading text-center">Magia</div>
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-xs-3">
@@ -51,27 +70,8 @@
                 </div>
             </div>
             <div class="col-xs-12 col-md-6">
-                <div class="panel panel-primary">
-                    <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-bank"></i> Economía</div>
-                    <div class="panel-body">
-                        <div class="row">
-                            <div class="col-xs-3">
-                                <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/treasure.jpg') }}">
-                            </div>
-                            <div class="col-xs-9">
-
-                            </div>
-                        </div>
-                    </div>
-                    <div class="btn-group btn-group-justified" role="group" aria-label="...">
-                        <a href="{{ path('archmage_game_kingdom_tax') }}" class="btn btn-default"><i class="fa fa-fw fa-lg fa-money"></i><span class="hidden-xs"> Recaudar</span></a>
-                        <a href="{{ path('archmage_game_kingdom_hire') }}" class="btn btn-default"><i class="fa fa-fw fa-lg fa-beer"></i><span class="hidden-xs"> Contratar</span></a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xs-12 col-md-6">
-                <div class="panel panel-primary">
-                    <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-flag-checkered"></i> Ejército</div>
+                <div class="panel panel-default">
+                    <div class="panel-heading text-center">Ejército</div>
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-xs-3">
@@ -90,8 +90,8 @@
                 </div>
             </div>
             <div class="col-xs-12 col-md-6">
-                <div class="panel panel-primary">
-                    <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-cubes"></i> Artefactos</div>
+                <div class="panel panel-default">
+                    <div class="panel-heading text-center">Artefactos</div>
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-xs-3">
@@ -103,14 +103,14 @@
                         </div>
                     </div>
                     <div class="btn-group btn-group-justified" role="group" aria-label="...">
-                        <a href="{{ path('archmage_game_kingdom_auction') }}" class="btn btn-default"><i class="fa fa-fw fa-lg fa-user-secret"></i><span class="hidden-xs"> Comerciar</span></a>
+                        <a href="{{ path('archmage_game_kingdom_auction') }}" class="btn btn-default"><i class="fa fa-fw fa-lg fa-user-secret"></i><span class="hidden-xs"> Adquirir</span></a>
                         <a href="{{ path('archmage_game_magic_artifact') }}" class="btn btn-default"><i class="fa fa-fw fa-lg fa-joomla"></i><span class="hidden-xs"> Usar</span></a>
                     </div>
                 </div>
             </div>
             <div class="col-xs-12 col-md-6">
-                <div class="panel panel-primary">
-                    <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-group"></i> Social</div>
+                <div class="panel panel-default">
+                    <div class="panel-heading text-center">Social</div>
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-xs-3">
@@ -123,7 +123,7 @@
                     </div>
                     <div class="btn-group btn-group-justified" role="group" aria-label="...">
                         <a href="{{ path('archmage_game_account_inbox') }}" class="btn btn-default"><i class="fa fa-fw fa-lg fa-envelope"></i><span class="hidden-xs"> Leer</span></a>
-                        <a href="{{ path('archmage_game_account_inbox') }}" class="btn btn-default"><i class="fa fa-fw fa-lg fa-send"></i><span class="hidden-xs"> Enviar</span></a>
+                        <a href="{{ path('archmage_game_account_outbox') }}" class="btn btn-default"><i class="fa fa-fw fa-lg fa-send"></i><span class="hidden-xs"> Enviar</span></a>
                     </div>
                 </div>
             </div>
