--- a/src/Archmage/GameBundle/Resources/views/Kingdom/tax.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/tax.html.twig
@@ -7,9 +7,9 @@
         <div class="row">
             <div class="col-md-offset-3 col-md-6 col-xs-12">
                 <div class="page-header text-center">
-                    <h1><i class="fa fa-fw fa-lg fa-money"></i>Recaudar</h1>
+                    <h1><i class="fa fa-fw fa-money"></i>Recaudar oro</h1>
                 </div>
-                <div class="panel panel-primary">
+                <div class="panel panel-default">
                     <div class="panel-heading text-center">Gana oro aplicando impuestos</div>
                     <div class="panel-body text-center">
                         <form data-toggle="validator">
@@ -20,11 +20,11 @@
                                     <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
                                 </div>
                             </div>
-                            <button type="submit" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-hourglass-half"></i> Gastar turnos</button>
+                            <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-lg fa-hourglass-half"></i> Gastar turnos</button>
                         </form>
                     </div>
                     <div class="panel-footer">
-                        Aquí puedes ganar dinero exprimiendo al máximo a tus leales subditos. Necesitas grandes cantidades de oro para pagar mantenimientos, contratar héroes, pujar en el mercado negro o ganar el favor de un dios.
+                        Aquí puedes ganar mucho oro exprimiendo al máximo a tus leales subditos. Necesitas grandes cantidades de oro para pagar mantenimientos, contratar héroes, consturir y pujar en el mercado negro.
                     </div>
                 </div>
             </div>
