--- a/src/Archmage/GameBundle/Resources/views/Magic/conjure.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/conjure.html.twig
@@ -7,7 +7,7 @@
         <div class="row">
             <div class="col-md-offset-3 col-md-6 col-xs-12">
                 <div class="page-header text-center">
-                    <h1><i class="fa fa-fw fa-lg fa-magic"></i>Conjurar</h1>
+                    <h1><i class="fa fa-fw fa-magic"></i>Conjurar</h1>
                 </div>
             </div>
         </div>
