--- a/src/Archmage/GameBundle/Resources/views/Territory/build.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Territory/build.html.twig
@@ -7,9 +7,9 @@
         <div class="row">
             <div class="col-md-offset-3 col-md-6 col-xs-12">
                 <div class="page-header text-center">
-                    <h1><i class="fa fa-fw fa-lg fa-home"></i>Construir</h1>
+                    <h1><i class="fa fa-fw fa-home"></i>Construir</h1>
                 </div>
-                <div class="panel panel-primary">
+                <div class="panel panel-default">
                     <div class="panel-heading text-center">Invierte turnos y tierras para aumentar tu reino</div>
                     <div class="panel-body text-center">
                         <form data-toggle="validator" role="form">
@@ -62,7 +62,7 @@
                                     <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
                                 </div>
                             </div>
-                            <button type="submit" class="btn btn-primary"><i class="fa fa-fw fa-lg fa-hourglass-half"></i> Gastar tierras</button>
+                            <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-lg fa-hourglass-half"></i> Gastar tierras</button>
                         </form>
                     </div>
                     <div class="panel-footer">
